--- a/package.json
+++ b/package.json
@@ -1,32 +1,74 @@
 {
-  "name": "minimal-mistakes",
-  "version": "4.8.0",
-  "description": "Minimal Mistakes Jekyll theme npm build scripts",
+  "name": "jswecan",
+  "version": "1.0.0",
+  "description": "Personal blog of David Atias - Software development",
+  "main": "app/js/app.js",
+  "scripts": {
+    "start": "poi watch & jekyll serve"
+  },
   "repository": {
     "type": "git",
-    "url": "git://github.com/mmistakes/minimal-mistakes.git"
+    "url": "git+https://github.com/davidaam/davidaam.me.git"
   },
-  "keywords": ["jekyll", "theme", "minimal"],
-  "author": "Michael Rose",
-  "license": "MIT",
+  "keywords": [
+    "jekyll",
+    "blog",
+    "software"
+  ],
+  "author": "David Atias",
+  "license": "ISC",
   "bugs": {
-    "url": "https://github.com/mmistakes/minimal-mistakes/issues"
+    "url": "https://github.com/davidaam/davidaam.me/issues"
   },
-  "homepage": "https://mmistakes.github.io/minimal-mistakes/",
-  "engines": {
-    "node": ">= 0.10.0"
-  },
+  "homepage": "https://github.com/davidaam/davidaam.me#readme",
   "devDependencies": {
-    "npm-run-all": "^1.7.0",
-    "onchange": "^2.2.0",
-    "uglify-js": "^2.6.1"
+    "babel-core": "^6.7.7",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "brunch": "^2.10.12",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6"
   },
+  "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
+  }
+}
+{
+  "name": "jswecan",
+  "version": "1.0.0",
+  "description": "Personal blog of David Atias - Software development",
+  "main": "app/js/app.js",
   "scripts": {
-    "uglify":
-      "uglifyjs assets/js/vendor/jquery/jquery-3.2.1.min.js assets/js/plugins/jquery.fitvids.js assets/js/plugins/jquery.greedy-navigation.js assets/js/plugins/jquery.magnific-popup.js assets/js/plugins/jquery.smooth-scroll.min.js assets/js/_main.js -c -m -o assets/js/main.min.js",
-    "add-banner": "node banner.js",
-    "watch:js":
-      "onchange \"assets/js/**/*.js\" -e \"assets/js/main.min.js\" -- npm run build:js",
-    "build:js": "npm run uglify && npm run add-banner"
+    "start": "poi watch & jekyll serve"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/davidaam/davidaam.me.git"
+  },
+  "keywords": [
+    "jekyll",
+    "blog",
+    "software"
+  ],
+  "author": "David Atias",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/davidaam/davidaam.me/issues"
+  },
+  "homepage": "https://github.com/davidaam/davidaam.me#readme",
+  "devDependencies": {
+    "babel-core": "^6.7.7",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "brunch": "^2.10.12",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6"
+  },
+  "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   }
 }
